@@ -13,23 +13,6 @@
 #endif
 
 
-#if PY_VERSION_HEX >= 0x0203000A /* Python 2.3a0 or later */
-
-#define PyObjCBool_Check(x) PyBool_Check(x)
-#define PyObjCBool_FromLong(x) PyBool_FromLong(x)
-
-#else /* Python 2.2 */
-
-typedef PyIntObject PyObjCBoolObject;
-extern  PyTypeObject PyObjCBool_Type;
-
-#define PyObjCBool_Check(x) ((x)->ob_type == &PyObjCBool_Type)
-
-/* Function to return a bool from a C long */
-PyObject * PyObjCBool_FromLong(long);
-
-#endif /* Python 2.2 */
-
 #if PY_VERSION_HEX < 0x020300b0 
 
 #ifndef PyObjC_API_H
